--- a/elementos/footer.html
+++ b/elementos/footer.html
@@ -2,7 +2,7 @@
   <div id="degrade"><img src="img/logo-branca.png"></div>
   <div id="redes"><a target="_blank" href="https://instagram.com/enisolucoes.inf"><ion-icon title="Instagram" name="logo-instagram"></ion-icon></a><a target="_blank" href="https://wa.me/5588993768569"><ion-icon title="Whatsapp" name="logo-whatsapp"></ion-icon></a></div>
   <div id="info">
-    <p><a target="_blank" href="https://maps.app.goo.gl/c6ryuUqR97dsxmtM6"><ion-icon id="local-icon" name="location-sharp"></ion-icon> Rua Ratisbona, 452 - Centro, Crato, Ceará. CEP 63.100-140.</a></p>
+    <p><a target="_blank" href="https://maps.app.goo.gl/c6ryuUqR97dsxmtM6"><ion-icon id="local-icon" name="location-sharp"></ion-icon> Rua José Carvalho, 389 - Centro, Crato, Ceará. CEP 63.100-020.</a></p>
     <br>
     <p>
       <span>Eni Soluções Informática</span>
